<resources>
    <string name="app_name">Healthy</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_coord">Coordinador</string>
    <string name="title_activity_Admin">Administrador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_actividades">Actividades</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_medallas">Medallas</string>
    <string name="menu_logout">Cerrar Sesion</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Inicia Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">El mail ingresado no es válido.</string>
    <string name="invalid_password">Password incorrecto.</string>
    <string name="login_failed">"Error al iniciar sesión. Las credenciales no son correctas. Intente nuevamente."</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="entregarMedalla">Entregar Medalla</string>

    <string name="admin_home">Inicio</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="listarUsuarios">Listar Usuarios</string>
    <string name="listarActividades">Listar actividades</string>
    <string name="listarEventos">Listar eventos</string>
    <string name="mailpredefinido">/@healthy.com</string>

    <string-array name="roles">
        <item>Administrador</item>
        <item>Coordinador</item>
        <item>Usuario</item>
    </string-array>

    <string-array name="coloresMedalla">
        <item>Oro</item>
        <item>Plata</item>
        <item>Bronce</item>
    </string-array>
</resources>
