<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home2"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_actividades"
            android:icon="@drawable/icon_activ"
            android:title="@string/menu_actividades" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/icon_evento"
            android:title="@string/menu_eventos" />
        <item
            android:id="@+id/nav_medallas"
            android:icon="@drawable/icon_medal"
            android:title="@string/menu_medallas" />

    </group>
    <item android:title="Salir">
        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/icon_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
